* update index.html (add link to lleag10th.html) * create lleag10th.html (10th anniversary version generator UI) * update css

--- a/lib/custom.css
+++ b/lib/custom.css
@@ -78,3 +78,13 @@ div.file-drop-area .custom-design {
 .tips {
     color: #25c;
 }
+.mode-select {
+    color: #ff589f;
+}
+.mode-select a:link,
+.mode-select a:hover,
+.mode-select a:active,
+.mode-select a:visited {
+    color: #ff589f;
+    text-decoration: none;
+}
